# riscv_amd64_demos

./: README.md  dune-project  mmap.t  pascal.opam  print.s  run.t
001helloworld/: amd64.s  dune  run.t  rv64.s
005heap/: dune  mmap.t  mmap_asm_demo.S  mmap_c_demo.S
escaping/: .gdbinit  README.md  amd64.s  benchmark.cpp  dune  run.t  rv64.s  rv64_escaping.s
escaping/include/: needsescaping.h
fac/: .gdbinit  amd64.s  amd64_runtime.s  dune  facbyte.s  run.t  rv64.s  rv64_runtime.s
io/: .gdbinit  README.md  amd64.s  demo_in_c.c  dune  run.t  rv64.S  test.txt
json-like/: .gdbinit  amd64_core.s  dune  run.t  rv64.s  rv64_core.s
read_int/: .gdbinit  demo_in_c.c  dune  run.t  rv64.s
