(lang dune 3.11)

(name pascal)

(generate_opam_files true)

(source
 (github Kakadu/riscv_amd64_demos))

(authors "Kakadu")

(license GPL-3.0-or-later)

(documentation https://url/to/documentation)

(package
 (name pascal)
 (allow_empty)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
