(rule
 (targets mmap_c_demo.exe)
 (deps mmap_c_demo.c)
 (mode
  (promote (until-clean)))
 (action
  (run riscv64-linux-gnu-gcc -O3 -march=rv64gc_zbb %{deps} -o %{targets})))

(rule
 (targets mmap_c_demo.S)
 (deps mmap_c_demo.c)
 (mode
  (promote (until-clean)))
 (action
  (run riscv64-linux-gnu-gcc -O3 -march=rv64gc_zbb %{deps} -S -o %{targets})))

(rule
 (targets mmap_asm_demo.exe)
 (deps mmap_asm_demo.S)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-as -march=rv64gc_zbb %{deps} -o main.o)
   (run riscv64-linux-gnu-ld main.o -o %{targets}))))

(cram
 (applies_to mmap)
 (deps ./mmap_c_demo.exe mmap_c_demo.S mmap_asm_demo.exe))
