(rule
 (targets rv64.exe)
 (deps
  (:src rv64.S)
  ;   (:runtime rv64_runtime.s)
  )
 (mode
  (promote (until-clean)))
 (action
  (progn
   ;    (run riscv64-linux-gnu-gcc -march=rv64gc %{runtime} -c -o runtime.o)
   (run riscv64-linux-gnu-as -march=rv64gc %{src} -o rv64.o)
   (run riscv64-linux-gnu-ld rv64.o -o %{targets}))))

(rule
 (targets demo_in_c.exe)
 (deps
  (:src demo_in_c.c))
 (action
  (run riscv64-linux-gnu-gcc -o %{targets} %{src})))

(cram
 (deps
  rv64.exe
  test.txt
  amd64.exe
  demo_in_c.exe
  ;
  ))

; (rule
;  (targets amd64_runtime.o)
;  (deps
;   (:src amd64_runtime.s))
;  (action
;   (progn
;    (run nasm -g -F dwarf -felf64 %{src} -o %{targets}))))

(rule
 (targets amd64.exe)
 (deps
  (:srcasm amd64.s)
  ;(:runtime amd64_runtime.o)
  )
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run nasm -g -F dwarf -felf64 %{srcasm} -o main.o)
   (run ld -g main.o -o %{targets})
   ;(run gcc-12 -g %{runtime} fac.o -o %{targets})
   )))
