(rule
 (targets rv64_runtime.o)
 (deps
  (:src ../fac/rv64_runtime.s))
 (action
  (run riscv64-linux-gnu-as -march=rv64gc %{src} -o %{targets})))

(rule
 (targets rv64_core.o)
 (deps
  (:src rv64_core.s))
 (action
  (run
   riscv64-linux-gnu-as
   ;-march=rv64gc_zve64x
   -march=rv64gv
   %{src}
   -o
   %{targets})))

(rule
 (targets rv64.exe)
 (deps
  (:src rv64.s)
  (:lib rv64_core.o)
  (:runtime rv64_runtime.o))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    riscv64-linux-gnu-as
    ;-march=rv64gc_zve64x
    -march=rv64gv
    %{src}
    -o
    rv64.o)
   (run riscv64-linux-gnu-ld %{runtime} %{lib} rv64.o -o %{targets}))))

(cram
 (deps
  rv64.exe
  ;  amd64.exe
  ))

; (rule
;  (targets amd64_runtime.o)
;  (deps
;   (:src ../fac/amd64_runtime.s))
;  (action
;   (progn
;    (run nasm -g -F dwarf -felf64 %{src} -o %{targets}))))

; (rule
;  (targets amd64_core.o)
;  (deps
;   (:src amd64_core.s))
;  (action
;   (run nasm -g -F dwarf -felf64 %{src} -o %{targets})))

; (rule
;  (targets amd64.exe)
;  (deps
;   (:srcasm amd64.s)
;   (:runtime amd64_runtime.o)
;   (:implo amd64_core.o))
;  (mode
;   (promote (until-clean)))
;  (action
;   (progn
;    (run nasm -g -F dwarf -felf64 %{srcasm} -o fac.o)
;    (run ld -g %{runtime} %{implo} fac.o -o %{targets})
;    ;(run gcc-12 -g %{runtime} fac.o -o %{targets})
;    )))

; (rule
;  (targets benchmark.exe)
;  (deps
;   (:src benchmark.cpp)
;   amd64_core.o
;   performancecounters/benchmarker.h
;   performancecounters/event_counter.h
;   performancecounters/linux-perf-events.h
;   performancecounters/event_counter.h
;   include/needscore.h
;   ;
;   )
;  (action
;   (run
;    c++
;    -std=c++20
;    -O3
;    -Wall
;    -o
;    %{targets}
;    amd64_core.o
;    benchmark.cpp
;    -I.
;    -Iinclude)))

; (cram
;  (deps benchmark.exe))
